--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,14 +1,14 @@
 name: 刷步数
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-  schedule:
-    - cron: 02 13 * * *
-  watch:
-    types: started
+#  push:
+#    branches: [ main ]
+#  pull_request:
+#    branches: [ main ]
+#  schedule:
+#    - cron: 02 13 * * *
+#  watch:
+#    types: started
   workflow_dispatch: 
     branches: [ main ]
 
